# android-cpp-app-example

./: .gitignore  README  settings.gradle
android-cpp-app/: build.gradle
android-cpp-app/src/cpp/: CMakeLists.txt  main.cpp
android-cpp-app/src/main/: AndroidManifest.xml
android-cpp-app/src/main/res/values/: string.xml
